--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
    </title>
 </head>
 <body>
-  <h1> Welcome to NCCIA!</h1>
+  <main>
+  <header>
+      <h2> Welcome to NCCIA!</h2>
   <p>
   <bing, yo>
     </p>
